added javascript file

--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What do we need?</title>
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>What do we need?</title>
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+    </head>
     <body>
-    <header>
-        <nav>
+        <script src="javascript.js"></script>  
+        <header>
+            <p id="demo"></p> <button onclick="myFunction()">Do you wipe?</button>
+            <nav>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Toiletpapier_%28Gobran111%29.jpg/1200px-Toiletpapier_%28Gobran111%29.jpg">
             <h1>Toilet paper!</h1>
             <p>We need it! Now!</p>
-        </nav>
-    </header>
-    <main>
-        <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/11852/production/_111126717_gettyimages-1044769034.jpg">
-        <h1>
-        <p> Don't let this happen to you! Please visit <a href="http://www.nicetrysucker.com">here</a>!
-        </p>
-    </main>
-    <footer>
-        <nav>
-        <h2>
-        Aaaaand...<a href="https://bryantdavis1986.github.io/dog-waler/">pitties</a>!
-        </h2>
-        </nav>
-    </footer>
-</body>
+            </nav>
+        </header>
+        <main>
+            <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/11852/production/_111126717_gettyimages-1044769034.jpg">
+            <h1>
+            <p> Don't let this happen to you! Please visit <a href="http://www.nicetrysucker.com">here</a>!
+            </p>
+        </main>
+        <footer>
+            <nav>
+            <h2>
+            Aaaaand...<a href="https://bryantdavis1986.github.io/dog-waler/">pitties</a>!
+            </h2>
+            </nav>
+        </footer>
+    </body>
 </html>
