updated javascript code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="javascript.js"></script>
         <header>
             <p id="demo"></p> <button onclick="myFunction()">Do you wipe?</button>
+            <p id="again"></p> <button onclick="quantity()">How many rolls of toilet paper do you think you need?</button>
             <nav>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Toiletpapier_%28Gobran111%29.jpg/1200px-Toiletpapier_%28Gobran111%29.jpg">
             <h1>Toilet paper!</h1>
